--- a/tmux.conf
+++ b/tmux.conf
@@ -24,13 +24,13 @@ set-option -g mouse-select-window on
 set-window-option -g mode-mouse on
 set-window-option -g mode-keys vi
 
+set-option -g status-justify left
 set-option -g status-keys vi
-set-option -g status-left '#[bg=red] #[default] '
-set-option -g status-bg yellow
-set-option -g status-fg black
-set-option -g status-right '#[bg=green] #[bg=blue]#[fg=white,bold] #(date "+%a %b %d %H:%M") #[bg=green] '
+set-option -g status-left '#[fg=white,bold] #h #[fg=black,bold]|'
+set-option -g status-bg default
+set-option -g status-right '#[bg=yellow] #[bg=green] #[bg=blue]#[fg=white,bold] #(date "+%a %b %d %H:%M") #[bg=green] #[bg=yellow] '
 set-option -g status-interval 60
 
-set-window-option -g window-status-format ' #[fg=black]#I) #W '
-set-window-option -g window-status-current-format ' #[bg=magenta]#[fg=white,bold]#I- #W '
+set-window-option -g window-status-format '#[bg=green] #[bg=yellow] #[fg=black]#I. #W '
+set-window-option -g window-status-current-format '#[bg=blue] #[bg=magenta] #[fg=white,bold]#I) #W '
 set-window-option -g utf8 on
