--- a/tmux.conf
+++ b/tmux.conf
@@ -26,11 +26,11 @@ set-window-option -g mode-keys vi
 
 set-option -g status-justify left
 set-option -g status-keys vi
-set-option -g status-left '#[fg=white,bold] #h #[fg=black,bold]|'
+set-option -g status-left '#[bg=blue] #[bg=default]#[fg=white,bold] #h #[fg=black,bold]#[bg=blue] '
 set-option -g status-bg default
-set-option -g status-right '#[bg=yellow] #[bg=green] #[bg=blue]#[fg=white,bold] #(date "+%a %b %d %H:%M") #[bg=green] #[bg=yellow] '
+set-option -g status-right '#[bg=blue] #[bg=default]#[fg=white,bold] #(date "+%a %b %d %H:%M") #[bg=blue] '
 set-option -g status-interval 60
 
-set-window-option -g window-status-format '#[bg=green] #[bg=yellow] #[fg=black]#I. #W '
-set-window-option -g window-status-current-format '#[bg=blue] #[bg=magenta] #[fg=white,bold]#I) #W '
+set-window-option -g window-status-format '#[bg=green] #I #[bg=yellow]#[fg=black] #W '
+set-window-option -g window-status-current-format '#[bg=red]#[fg=white,bold] #I #[bg=blue]#[fg=white,bold] #W '
 set-window-option -g utf8 on
