--- a/tmux.conf
+++ b/tmux.conf
@@ -1,22 +1,40 @@
 unbind C-b
+
+# Backspace-bind-key
 set-option -g prefix "\\"
 bind-key "\\" last-window
 bind-key ] send-prefix
 
+# CTRL-A (screen-friendly)
+# set-option -g prefix C-a
+# bind-key a last-window
+# bind-key C-a last-window
+
+# Bind-key switch
 bind-key F9 set-option -g prefix C-a
 bind-key F10 set-option -g prefix "\\"
+
+# Window-movement
 bind-key BSpace previous-window
 
-# bind-key h select-pane -L
-# bind-key l select-pane -R
-# bind-key j select-pane -D
-# bind-key k select-pane -U
-bind-key Tab select-pane -R
+# Pane-movement
+bind-key h select-pane -L
+bind-key l select-pane -R
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key Tab select-pane -t :.+   # Same as C-o
 
+# Synchronize panes
+bind-key * set-window-option synchronize-pane
+
+# Split windows
+bind-key S split-window -v
+bind-key | split-window -h
+
+# Reload
 bind-key r source-file ~/.tmux.conf
 
 set-option -g history-limit 10240
-
 set-option -g mouse-resize-pane on
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
