--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,7 @@ set-option -g default-command "reattach-to-user-namespace -l bash"
 unbind C-b
 set-option -g prefix "\\"
 bind-key "\\" last-window
+bind-key n send-keys \n
 bind-key ] send-prefix
 
 # CTRL-A (screen-friendly)
@@ -18,6 +19,8 @@ bind-key F10 set-option -g prefix "\\"
 
 # Window-movement
 bind-key BSpace previous-window
+bind-key Space next-window
+bind-key / next-layout
 
 # Pane-movement
 bind-key h select-pane -L
