copy-friendly tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,9 +4,23 @@ set-option -g default-command "reattach-to-user-namespace -l bash"
 # Backspace-bind-key
 unbind C-b
 set-option -g prefix "\\"
-bind-key "\\" last-window
-bind-key n send-keys \n
 bind-key ] send-prefix
+
+bind-key "\\" last-window
+bind-key "\]" send-keys '\'
+
+# Copy-friendly
+bind-key r send-keys \r
+bind-key t send-keys \t
+bind-key n send-keys \n
+bind-key '"' send-keys '\"'
+bind-key "'" send-keys "\\'"
+
+# Alternatives
+bind-key R source-file ~/.tmux.conf
+bind-key T clock-mode
+bind-key - split-window
+bind-key Enter command-prompt -p index "select-window -t ':%%'"
 
 # CTRL-A (screen-friendly)
 # set-option -g prefix C-a
@@ -35,9 +49,6 @@ bind-key * set-window-option synchronize-pane
 # Split windows
 bind-key S split-window -v
 bind-key | split-window -h
-
-# Reload
-bind-key r source-file ~/.tmux.conf
 
 set-option -g history-limit 10240
 set-option -g mouse-resize-pane on
