--- a/tmux.conf
+++ b/tmux.conf
@@ -12,15 +12,26 @@ bind-key "\]" send-keys '\'
 # Copy-friendly
 bind-key r send-keys \r
 bind-key t send-keys \t
+bind-key s send-keys \s
+bind-key S send-keys \S
 bind-key n send-keys \n
+bind-key b send-keys \b
+bind-key d send-keys \d
+bind-key w send-keys \w
+bind-key A send-keys \A
+bind-key Z send-keys \Z
 bind-key '"' send-keys '\"'
 bind-key "'" send-keys "\\'"
+bind-key Enter send-keys "\\\n"
 
 # Alternatives
 bind-key R source-file ~/.tmux.conf
 bind-key T clock-mode
 bind-key - split-window
-bind-key Enter command-prompt -p index "select-window -t ':%%'"
+bind-key ` command-prompt -p index "select-window -t ':%%'"
+#bind-key S choose-tree
+#bind-key W choose-window
+bind-key D detach-client
 
 # CTRL-A (screen-friendly)
 # set-option -g prefix C-a
@@ -47,7 +58,7 @@ bind-key Tab select-pane -t :.+   # Same as C-o
 bind-key * set-window-option synchronize-pane
 
 # Split windows
-bind-key S split-window -v
+# bind-key S split-window -v
 bind-key | split-window -h
 
 set-option -g history-limit 10240
