--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,7 @@ bind-key "\]" send-keys '\'
 bind-key r send-keys \r
 bind-key t send-keys \t
 bind-key s send-keys \s
+bind-key e send-keys \e
 bind-key S send-keys \S
 bind-key n send-keys \n
 bind-key b send-keys \b
