--- a/tmux.conf
+++ b/tmux.conf
@@ -38,6 +38,7 @@ bind-key D detach-client
 # set-option -g prefix C-a
 # bind-key a last-window
 # bind-key C-a last-window
+# bind a send-prefix
 
 # Bind-key switch
 bind-key F9 set-option -g prefix C-a
