--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,9 @@
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
 set-option -g default-command "reattach-to-user-namespace -l bash"
 
+# Index starts from 1
+set-option -g base-index 1
+
 # Backspace-bind-key
 unbind C-b
 set-option -g prefix "\\"
@@ -24,6 +27,12 @@ bind-key Z send-keys \Z
 bind-key '"' send-keys '\"'
 bind-key "'" send-keys "\\'"
 bind-key Enter send-keys "\\\n"
+
+# tmux-zoom
+bind-key + \
+  new-window -d -n tmux-zoom 'clear && echo -n Zoomed. Press enter key to return. && read; tmux swap-pane -s tmux-zoom.0' \; \
+  swap-pane -s tmux-zoom.0 \; \
+  select-window -t tmux-zoom
 
 # Alternatives
 bind-key R source-file ~/.tmux.conf
@@ -58,6 +67,9 @@ bind-key Tab select-pane -t :.+   # Same as C-o
 
 # Synchronize panes
 bind-key * set-window-option synchronize-pane
+
+# Spool
+bind-key C-p pipe-pane -o 'cat >>~/output.#I-#P'
 
 # Split windows
 # bind-key S split-window -v
