--- a/tmux.conf
+++ b/tmux.conf
@@ -85,11 +85,11 @@ set-window-option -g mode-keys vi
 
 set-option -g status-justify left
 set-option -g status-keys vi
-set-option -g status-left '#[bg=blue] #[bg=black]#[fg=blue,bold] #h '
+set-option -g status-left '#[bg=colour61] #[bg=colour235]#[fg=colour185] #h '
 set-option -g status-bg black
-set-option -g status-right '#[bg=black]#[fg=blue,bold] #(date "+%a %b %d %H:%M") #[bg=blue] '
+set-option -g status-right '#[bg=colour235]#[fg=colour185] #(date "+%a %b %d %H:%M") #[bg=colour61] '
 set-option -g status-interval 60
 
-set-window-option -g window-status-format '#[bg=green] #I #[bg=yellow]#[fg=black] #W '
-set-window-option -g window-status-current-format '#[bg=red]#[fg=white,bold] #I #[bg=magenta,bold]#[fg=white,bold] #W '
+set-window-option -g window-status-format '#[bg=colour237]#[fg=colour107] #I #[bg=colour238]#[fg=colour110] #W '
+set-window-option -g window-status-current-format '#[bg=colour235]#[fg=colour215] #I #[bg=colour234]#[fg=colour167] #W '
 set-window-option -g utf8 on
