--- a/tmux.conf
+++ b/tmux.conf
@@ -88,7 +88,7 @@ set-option -g status-keys vi
 set-option -g status-left '#[bg=colour72] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #h #[bg=colour236] '
 set-option -g status-left-length 16
 set-option -g status-bg colour237
-set-option -g status-right '#[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %b %d %H:%M") #[bg=colour237] #[bg=colour72] '
+set-option -g status-right '#[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %b %d %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
 set-option -g status-interval 60
 
 set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239] #[bg=colour238] '
