bind-key R to rotate-window

--- a/tmux.conf
+++ b/tmux.conf
@@ -35,7 +35,8 @@ bind-key + \
   select-window -t tmux-zoom
 
 # Alternatives
-bind-key R source-file ~/.tmux.conf
+# bind-key R source-file ~/.tmux.conf
+bind-key R rotate-window
 bind-key T clock-mode
 bind-key - split-window
 bind-key ` command-prompt -p index "select-window -t ':%%'"
