Vim split & tmux split

--- a/tmux.conf
+++ b/tmux.conf
@@ -60,11 +60,16 @@ bind-key Space next-window
 bind-key / next-layout
 
 # Pane-movement
-bind-key h select-pane -L
-bind-key l select-pane -R
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key Tab select-pane -t :.+   # Same as C-o
+# bind-key h select-pane -L
+# bind-key l select-pane -R
+# bind-key j select-pane -D
+# bind-key k select-pane -U
+# bind-key Tab select-pane -t :.+   # Same as C-o
+bind-key h   run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-prefix && tmux send-keys h) || tmux select-pane -L"
+bind-key j   run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-prefix && tmux send-keys j) || tmux select-pane -D"
+bind-key l   run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-prefix && tmux send-keys l) || tmux select-pane -R"
+bind-key k   run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-prefix && tmux send-keys k) || tmux select-pane -U"
+bind-key Tab run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-prefix && tmux send-keys Tab) || tmux select-pane -t :.+"
 
 # Synchronize panes
 bind-key * set-window-option synchronize-pane
