--- a/tmux.conf
+++ b/tmux.conf
@@ -81,6 +81,9 @@ bind-key C-p pipe-pane -o 'cat >>~/output.#I-#P'
 # bind-key S split-window -v
 bind-key | split-window -h
 
+# Yank
+bind-key y run-shell "reattach-to-user-namespace -l bash -c 'tmux show-buffer | pbcopy'"
+
 set-option -g history-limit 10240
 set-option -g mouse-resize-pane on
 set-option -g mouse-select-pane on
