--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,8 @@ bind-key ] send-prefix
 bind-key "\\" last-window
 bind-key "\]" send-keys '\'
 
+bind-key p paste-buffer
+
 # Copy-friendly
 bind-key r send-keys \r
 bind-key t send-keys \t
