--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,9 @@
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
 set-option -g default-command "reattach-to-user-namespace -l bash"
 
+# 256-color terminal
+set-option -g default-terminal "screen-256color"
+
 # Index starts from 1
 set-option -g base-index 1
 
