--- a/tmux.conf
+++ b/tmux.conf
@@ -80,10 +80,10 @@ bind-key Tab run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmu
 bind-key * set-window-option synchronize-pane
 
 # Spool
-bind-key C-p pipe-pane -o 'cat >>~/output.#I-#P'
+# bind-key C-p pipe-pane -o 'cat >>~/output.#I-#P'
 
 # Capture pane and open in Vim
-bind-key C-c capture-pane\; save-buffer /tmp/tmux-capture.txt\; new-window "reattach-to-user-namespace -l bash -c 'view /tmp/tmux-capture.txt'"
+# bind-key C-c capture-pane\; save-buffer /tmp/tmux-capture.txt\; new-window "reattach-to-user-namespace -l bash -c 'view /tmp/tmux-capture.txt'"
 
 # Split windows
 # bind-key S split-window -v
