--- a/tmux.conf
+++ b/tmux.conf
@@ -101,7 +101,7 @@ set-window-option -g mode-mouse on
 set-window-option -g mode-keys vi
 
 set-option -g status-justify left
-set-option -g status-keys vi
+set-option -g status-keys emacs
 set-option -g status-left '#[bg=colour72] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #h #[bg=colour236] '
 set-option -g status-left-length 16
 set-option -g status-bg colour237
