--- a/tmux.conf
+++ b/tmux.conf
@@ -83,7 +83,7 @@ bind-key * set-window-option synchronize-pane
 # bind-key C-p pipe-pane -o 'cat >>~/output.#I-#P'
 
 # Capture pane and open in Vim
-# bind-key C-c capture-pane\; save-buffer /tmp/tmux-capture.txt\; new-window "reattach-to-user-namespace -l bash -c 'view /tmp/tmux-capture.txt'"
+bind-key C-c capture-pane -S -102400\; save-buffer /tmp/tmux-capture.txt\; new-window "view /tmp/tmux-capture.txt"\; delete-buffer
 
 # Split windows
 # bind-key S split-window -v
@@ -91,6 +91,9 @@ bind-key | split-window -h
 
 # Yank
 bind-key y run-shell "reattach-to-user-namespace -l bash -c 'tmux show-buffer | pbcopy'"
+
+# Tmux completion
+bind-key -n -r 'M-t' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(source ~/.fzf.bash; tmuxwords.rb --all --scroll 500 --min 5 | fzf --multi | paste -sd\\  -)\"'"
 
 set-option -g history-limit 102400
 set-option -g mouse-resize-pane on
