Update tmux configuration

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
+# brew install reattach-to-user-namespace
 set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # 256-color terminal
@@ -7,15 +8,50 @@ set-option -g default-terminal "screen-256color"
 # Index starts from 1
 set-option -g base-index 1
 
-# Backspace-bind-key
+# History
+set-option -g history-limit 102400
+
+# Repeat time limit
+set-option -g repeat-time 1000
+
+# UTF-8
+set-window-option -g utf8 on
+
+# Mouse
+set-option -g mouse-resize-pane on
+set-option -g mouse-select-pane on
+set-option -g mouse-select-window on
+
+# Copy-mode
+set-window-option -g mode-mouse on
+set-window-option -g mode-keys vi
+
+# Style
+set-option -g status-justify left
+set-option -g status-keys emacs
+set-option -g status-left '#[bg=colour72] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #h #[bg=colour236] '
+set-option -g status-left-length 16
+set-option -g status-bg colour237
+set-option -g status-right '#[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %b %d %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
+set-option -g status-interval 60
+
+set-option -g pane-active-border-fg colour240
+set-option -g pane-border-fg colour238
+
+set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239] #[bg=colour238] '
+set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215] #I #[bg=colour235]#[fg=colour167] #[bg=colour234]#W#[bg=colour235] #[bg=colour236] '
+
+# Backspace-bind-key (default)
 unbind C-b
 set-option -g prefix "\\"
-bind-key ] send-prefix
 
-bind-key "\\" last-window
-bind-key "\]" send-keys '\'
+# Bind-key switch
+bind-key F9  set-option -g prefix C-a \;\
+             bind-key a send-prefix \;\
+             bind-key C-a last-window
+bind-key F10 set-option -g prefix "\\" \;\
+             bind-key ] send-prefix
 
-bind-key p paste-buffer
 
 # Copy-friendly
 bind-key r send-keys \r
@@ -35,49 +71,35 @@ bind-key Enter send-keys "\\\n"
 
 # tmux-zoom
 bind-key + \
-  new-window -d -n tmux-zoom 'clear && echo -n Zoomed. Press enter key to return. && read; tmux swap-pane -s tmux-zoom.0' \; \
-  swap-pane -s tmux-zoom.0 \; \
+  new-window -d -n tmux-zoom 'clear && echo -n Zoomed. Press enter key to return. && read; tmux swap-pane -s tmux-zoom.0' \;\
+  swap-pane -s tmux-zoom.0 \;\
   select-window -t tmux-zoom
 
 # Alternatives
 # bind-key R source-file ~/.tmux.conf
-bind-key R rotate-window
+bind-key -r R rotate-window
 bind-key T clock-mode
-bind-key - split-window
+bind-key -r - split-window
 bind-key ` command-prompt -p index "select-window -t ':%%'"
 #bind-key S choose-tree
 #bind-key W choose-window
 bind-key D detach-client
 
-# CTRL-A (screen-friendly)
-# set-option -g prefix C-a
-# bind-key a last-window
-# bind-key C-a last-window
-# bind a send-prefix
-
-# Bind-key switch
-bind-key F9 set-option -g prefix C-a
-bind-key F10 set-option -g prefix "\\"
-
 # Window-movement
-bind-key BSpace previous-window
-bind-key Space next-window
-bind-key / next-layout
+bind-key -r BSpace previous-window
+bind-key -r Space next-window
+bind-key -r / next-layout
 
 # Pane-movement
-# bind-key h select-pane -L
-# bind-key l select-pane -R
-# bind-key j select-pane -D
-# bind-key k select-pane -U
-# bind-key Tab select-pane -t :.+   # Same as C-o
-bind-key h   run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-prefix && tmux send-keys h) || tmux select-pane -L"
-bind-key j   run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-prefix && tmux send-keys j) || tmux select-pane -D"
-bind-key l   run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-prefix && tmux send-keys l) || tmux select-pane -R"
-bind-key k   run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-prefix && tmux send-keys k) || tmux select-pane -U"
-bind-key Tab run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-prefix && tmux send-keys Tab) || tmux select-pane -t :.+"
+bind-key -r h select-pane -L
+bind-key -r l select-pane -R
+bind-key -r j select-pane -D
+bind-key -r k select-pane -U
+bind-key -r Tab select-pane -t :.+
+bind-key -r BTab select-pane -t :.-
 
 # Synchronize panes
-bind-key * set-window-option synchronize-pane
+bind-key -r * set-window-option synchronize-pane
 
 # Spool
 # bind-key C-p pipe-pane -o 'cat >>~/output.#I-#P'
@@ -87,33 +109,16 @@ bind-key C-c capture-pane -S -102400\; save-buffer /tmp/tmux-capture.txt\; new-w
 
 # Split windows
 # bind-key S split-window -v
-bind-key | split-window -h
+bind-key -r | split-window -h
 
-# Yank
+# Yank / Paste
 bind-key y run-shell "reattach-to-user-namespace -l bash -c 'tmux show-buffer | pbcopy'"
+bind-key p paste-buffer
 
 # Tmux completion
-bind-key -n -r 'M-t' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(source ~/.fzf.bash; tmuxwords.rb --all --scroll 1000 --min 5 | fzf --multi | paste -sd\\  -)\"'"
+bind-key -n 'M-t' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(source ~/.fzf.bash; tmuxwords.rb --all --scroll 1000 --min 5 | fzf --multi | paste -sd\\  -)\"'"
 
-set-option -g history-limit 102400
-set-option -g mouse-resize-pane on
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
+# Moving windows
+bind-key -r Right swap-window -t :+
+bind-key -r Left  swap-window -t :-
 
-set-window-option -g mode-mouse on
-set-window-option -g mode-keys vi
-
-set-option -g status-justify left
-set-option -g status-keys emacs
-set-option -g status-left '#[bg=colour72] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #h #[bg=colour236] '
-set-option -g status-left-length 16
-set-option -g status-bg colour237
-set-option -g status-right '#[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %b %d %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
-set-option -g status-interval 60
-
-set-option -g pane-active-border-fg colour240
-set-option -g pane-border-fg colour238
-
-set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239] #[bg=colour238] '
-set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215] #I #[bg=colour235]#[fg=colour167] #[bg=colour234]#W#[bg=colour235] #[bg=colour236] '
-set-window-option -g utf8 on
