--- a/tmux.conf
+++ b/tmux.conf
@@ -116,7 +116,7 @@ bind-key y run-shell "reattach-to-user-namespace -l bash -c 'tmux show-buffer | 
 bind-key p paste-buffer
 
 # Tmux completion
-bind-key -n 'M-t' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(source ~/.fzf.bash; tmuxwords.rb --all --scroll 1000 --min 5 | fzf --multi | while read item; do printf \"%q \" \"\$item\"; done)\"'"
+bind-key -n 'M-t' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(tmuxwords.rb --all --scroll 1000 --min 5 | fzf --multi | paste -sd\\  -)\"'"
 
 # Moving windows
 bind-key -r Right swap-window -t :+
