--- a/tmux.conf
+++ b/tmux.conf
@@ -12,7 +12,7 @@ set-option -g base-index 1
 set-option -g history-limit 102400
 
 # Repeat time limit
-set-option -g repeat-time 1000
+set-option -g repeat-time 500
 
 # UTF-8
 set-window-option -g utf8 on
@@ -91,10 +91,10 @@ bind-key -r Space next-window
 bind-key -r / next-layout
 
 # Pane-movement
-bind-key -r h select-pane -L
-bind-key -r l select-pane -R
-bind-key -r j select-pane -D
-bind-key -r k select-pane -U
+bind-key h select-pane -L
+bind-key l select-pane -R
+bind-key j select-pane -D
+bind-key k select-pane -U
 bind-key -r Tab select-pane -t :.+
 bind-key -r BTab select-pane -t :.-
 
