--- a/tmux.conf
+++ b/tmux.conf
@@ -44,13 +44,16 @@ set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215
 # Backspace-bind-key (default)
 unbind C-b
 set-option -g prefix "\\"
+bind-key ] send-prefix
+bind-key "\\" last-window
 
 # Bind-key switch
 bind-key F9  set-option -g prefix C-a \;\
              bind-key a send-prefix \;\
              bind-key C-a last-window
 bind-key F10 set-option -g prefix "\\" \;\
-             bind-key ] send-prefix
+             bind-key ] send-prefix \;\
+             bind-key "\\" last-window
 
 
 # Copy-friendly
