--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,9 @@ set-option -g default-terminal "screen-256color"
 # Index starts from 1
 set-option -g base-index 1
 
+# Renumber windows when a window is closed
+set-option -g renumber-windows on
+
 # History
 set-option -g history-limit 102400
 
