--- a/tmux.conf
+++ b/tmux.conf
@@ -125,6 +125,6 @@ bind-key p paste-buffer
 bind-key -n 'M-t' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(tmuxwords.rb --all --scroll 1000 --min 5 | fzf --multi | paste -sd\\  -)\"'"
 
 # Moving windows
-bind-key -r Right swap-window -t :+
-bind-key -r Left  swap-window -t :-
+bind-key -r > swap-window -t :+
+bind-key -r <  swap-window -t :-
 
