--- a/tmux.conf
+++ b/tmux.conf
@@ -41,8 +41,8 @@ set-option -g status-interval 60
 set-option -g pane-active-border-fg colour240
 set-option -g pane-border-fg colour238
 
-set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239] #[bg=colour238] '
-set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215] #I #[bg=colour235]#[fg=colour167] #[bg=colour234]#W#[bg=colour235] #[bg=colour236] '
+set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239]#[fg=colour195]#F#[bg=colour238] '
+set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215] #I #[bg=colour235]#[fg=colour167] #[bg=colour234]#W#[bg=colour235]#[fg=colour195]#F#[bg=colour236] '
 
 # Backspace-bind-key (default)
 unbind C-b
@@ -74,12 +74,6 @@ bind-key Z send-keys \Z
 bind-key '"' send-keys '\"'
 bind-key "'" send-keys "\\'"
 bind-key Enter send-keys "\\\n"
-
-# tmux-zoom
-bind-key + \
-  new-window -d -n tmux-zoom 'clear && echo -n Zoomed. Press enter key to return. && read; tmux swap-pane -s tmux-zoom.0' \;\
-  swap-pane -s tmux-zoom.0 \;\
-  select-window -t tmux-zoom
 
 # Alternatives
 # bind-key R source-file ~/.tmux.conf
