no -r / dash.vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -86,9 +86,9 @@ bind-key ` command-prompt -p index "select-window -t ':%%'"
 bind-key D detach-client
 
 # Window-movement
-bind-key -r BSpace previous-window
-bind-key -r Space next-window
-bind-key -r / next-layout
+bind-key BSpace previous-window
+bind-key Space next-window
+bind-key / next-layout
 
 # Pane-movement
 bind-key h select-pane -L
