--- a/tmux.conf
+++ b/tmux.conf
@@ -95,8 +95,8 @@ bind-key h select-pane -L
 bind-key l select-pane -R
 bind-key j select-pane -D
 bind-key k select-pane -U
-bind-key -r Tab select-pane -t :.+
-bind-key -r BTab select-pane -t :.-
+bind-key Tab select-pane -t :.+
+bind-key BTab select-pane -t :.-
 
 # Synchronize panes
 bind-key -r * set-window-option synchronize-pane
