--- a/tmux.conf
+++ b/tmux.conf
@@ -118,6 +118,9 @@ bind-key p paste-buffer
 # Tmux completion
 bind-key -n 'M-t' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(tmuxwords.rb --all --scroll 1000 --min 5 | fzf --multi | paste -sd\\  -)\"'"
 
+# fzf-locate
+bind-key -n 'M-l' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
+
 # Moving windows
 bind-key -r > swap-window -t :+
 bind-key -r <  swap-window -t :-
