--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,19 @@
-# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-# brew install reattach-to-user-namespace
-set-option -g default-command "reattach-to-user-namespace -l bash"
+# Hierarchy:
+#  Server
+#  ㄴSession
+#    ㄴWindow
+#      ㄴPane
 
-# 256-color terminal
-set-option -g default-terminal "screen-256color"
+# Options:
+# - Session options (set-option [-g])
+# - Window options (set-window-option [-g])
+
+# -------------------------------------------------------------------
+# Session options
+# -------------------------------------------------------------------
+# Change bind key to ctrl-a
+unbind-key c-b
+set-option -g prefix c-a
 
 # Index starts from 1
 set-option -g base-index 1
@@ -14,24 +24,81 @@ set-option -g renumber-windows on
 # History
 set-option -g history-limit 102400
 
-# Repeat time limit
+# Repeat time limit (ms)
 set-option -g repeat-time 500
 
+# 256-color terminal
+set-option -g default-terminal "screen-256color"
+
+# Key binding in the status line (bind-key :)
+set-option -g status-keys emacs
+
+# -------------------------------------------------------------------
+# Window options
+# -------------------------------------------------------------------
 # UTF-8
 set-window-option -g utf8 on
+
+# Copy-mode
+set-window-option -g mode-mouse on
+set-window-option -g mode-keys vi
 
 # Mouse
 set-option -g mouse-resize-pane on
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 
-# Copy-mode
-set-window-option -g mode-mouse on
-set-window-option -g mode-keys vi
+# -------------------------------------------------------------------
+# Key bindings
+# -------------------------------------------------------------------
+# ctrl-a ctrl-a
+bind-key c-a last-window
 
-# Style
+# ctrl-a a
+bind-key a send-prefix \;\
+
+# ctrl-a |
+bind-key | split-window -h
+
+# ctrl-a -
+bind-key - split-window
+
+# Moving windows
+bind-key -r > swap-window -t :+
+bind-key -r <  swap-window -t :-
+
+# Back and forth
+bind-key bspace previous-window
+bind-key space next-window
+bind-key / next-layout # Overridden
+
+# Pane-movement
+bind-key -r h select-pane -L
+bind-key -r l select-pane -R
+bind-key -r j select-pane -D
+bind-key -r k select-pane -U
+bind-key -r tab select-pane -t :.+
+bind-key -r btab select-pane -t :.-
+
+# Synchronize panes
+bind-key * set-window-option synchronize-pane
+
+# Reload ~/.tmux.conf
+bind-key R source-file ~/.tmux.conf
+
+# pbcopy
+bind-key y run-shell "bash -c 'tmux show-buffer | pbcopy'"
+
+# Capture pane and open in Vim
+bind-key C-c capture-pane -S -102400\;\
+             save-buffer /tmp/tmux-capture.txt\;\
+             new-window "view /tmp/tmux-capture.txt"\;\
+             delete-buffer
+
+# -------------------------------------------------------------------
+# Decoration (256-color)
+# -------------------------------------------------------------------
 set-option -g status-justify left
-set-option -g status-keys emacs
 set-option -g status-left '#[bg=colour72] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #h #[bg=colour236] '
 set-option -g status-left-length 16
 set-option -g status-bg colour237
@@ -44,10 +111,23 @@ set-option -g pane-border-fg colour238
 set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239]#[fg=colour195]#F#[bg=colour238] '
 set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215] #I #[bg=colour235]#[fg=colour167] #[bg=colour234]#W#[bg=colour235]#[fg=colour195]#F#[bg=colour236] '
 
-# Backspace-bind-key (default)
-unbind C-b
+# -------------------------------------------------------------------
+# fzf integration
+# -------------------------------------------------------------------
+# Tmux completion
+bind-key -n 'M-t' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(tmuxwords.rb --all --scroll 1000 --min 5 | fzf --multi | paste -sd\\  -)\"'"
+
+# fzf-locate
+bind-key -n 'M-l' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
+
+# -------------------------------------------------------------------
+# Here be dragons!
+# -------------------------------------------------------------------
+# Backslash bind-key
+unbind C-a
 set-option -g prefix "\\"
 bind-key ] send-prefix
+bind-key p paste-buffer
 bind-key "\\" last-window
 
 # Bind-key switch
@@ -57,71 +137,4 @@ bind-key F9  set-option -g prefix C-a \;\
 bind-key F10 set-option -g prefix "\\" \;\
              bind-key ] send-prefix \;\
              bind-key "\\" last-window
-
-
-# Copy-friendly
-bind-key r send-keys \r
-bind-key t send-keys \t
-bind-key s send-keys \s
-bind-key e send-keys \e
-bind-key S send-keys \S
-bind-key n send-keys \n
-bind-key b send-keys \b
-bind-key d send-keys \d
-bind-key w send-keys \w
-bind-key A send-keys \A
-bind-key Z send-keys \Z
-bind-key '"' send-keys '\"'
-bind-key "'" send-keys "\\'"
-bind-key Enter send-keys "\\\n"
-
-# Alternatives
-# bind-key R source-file ~/.tmux.conf
-bind-key -r R rotate-window
-bind-key T clock-mode
-bind-key -r - split-window
-bind-key ` command-prompt -p index "select-window -t ':%%'"
-#bind-key S choose-tree
-#bind-key W choose-window
-bind-key D detach-client
-
-# Window-movement
-bind-key BSpace previous-window
-bind-key Space next-window
-bind-key / next-layout
-
-# Pane-movement
-bind-key h select-pane -L
-bind-key l select-pane -R
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key Tab select-pane -t :.+
-bind-key BTab select-pane -t :.-
-
-# Synchronize panes
-bind-key -r * set-window-option synchronize-pane
-
-# Spool
-# bind-key C-p pipe-pane -o 'cat >>~/output.#I-#P'
-
-# Capture pane and open in Vim
-bind-key C-c capture-pane -S -102400\; save-buffer /tmp/tmux-capture.txt\; new-window "view /tmp/tmux-capture.txt"\; delete-buffer
-
-# Split windows
-# bind-key S split-window -v
-bind-key -r | split-window -h
-
-# Yank / Paste
-bind-key y run-shell "reattach-to-user-namespace -l bash -c 'tmux show-buffer | pbcopy'"
-bind-key p paste-buffer
-
-# Tmux completion
-bind-key -n 'M-t' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(tmuxwords.rb --all --scroll 1000 --min 5 | fzf --multi | paste -sd\\  -)\"'"
-
-# fzf-locate
-bind-key -n 'M-l' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
-
-# Moving windows
-bind-key -r > swap-window -t :+
-bind-key -r <  swap-window -t :-
 
