--- a/tmux.conf
+++ b/tmux.conf
@@ -84,7 +84,7 @@ bind-key -r btab select-pane -t :.-
 bind-key * set-window-option synchronize-pane
 
 # Reload ~/.tmux.conf
-bind-key R source-file ~/.tmux.conf
+bind-key R source-file ~/.tmux.conf \; display-message "Reloaded!"
 
 # pbcopy
 bind-key y run-shell "bash -c 'tmux show-buffer | pbcopy'"
@@ -124,17 +124,16 @@ bind-key -n 'M-l' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$
 # Here be dragons!
 # -------------------------------------------------------------------
 # Backslash bind-key
-unbind C-a
-set-option -g prefix "\\"
-bind-key ] send-prefix
-bind-key p paste-buffer
-bind-key "\\" last-window
+if-shell "test $USER = jg" \
+  "unbind C-a; set-option -g prefix \\ ; bind-key ] send-prefix; bind-key p paste-buffer; bind-key \\ last-window"
 
 # Bind-key switch
-bind-key F9  set-option -g prefix C-a \;\
-             bind-key a send-prefix \;\
+bind-key F9  set-option -g prefix C-a   \;\
+             bind-key a send-prefix     \;\
+             bind-key p previous-window \;\
              bind-key C-a last-window
-bind-key F10 set-option -g prefix "\\" \;\
-             bind-key ] send-prefix \;\
+bind-key F10 set-option -g prefix "\\"  \;\
+             bind-key ] send-prefix     \;\
+             bind-key p paste-buffer    \;\
              bind-key "\\" last-window
 
