--- a/tmux.conf
+++ b/tmux.conf
@@ -73,12 +73,12 @@ bind-key space next-window
 bind-key / next-layout # Overridden
 
 # Pane-movement
-bind-key -r h select-pane -L
-bind-key -r l select-pane -R
-bind-key -r j select-pane -D
-bind-key -r k select-pane -U
-bind-key -r tab select-pane -t :.+
-bind-key -r btab select-pane -t :.-
+bind-key h select-pane -L
+bind-key l select-pane -R
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key tab select-pane -t :.+
+bind-key btab select-pane -t :.-
 
 # Synchronize panes
 bind-key * set-window-option synchronize-pane
