--- a/tmux.conf
+++ b/tmux.conf
@@ -118,7 +118,7 @@ set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215
 bind-key -n 'M-t' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(tmuxwords.rb --all --scroll 1000 --min 5 | fzf --multi | paste -sd\\  -)\"'"
 
 # fzf-locate (all)
-bind-key -n 'M-a' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
+bind-key -n 'M-`' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
 
 # -------------------------------------------------------------------
 # Here be dragons!
