--- a/tmux.conf
+++ b/tmux.conf
@@ -120,6 +120,9 @@ bind-key -n 'M-t' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$
 # fzf-locate (all)
 bind-key -n 'M-`' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
 
+# select-pane (@george-b)
+bind-key 0 run "tmux split-window -p 40 'bash -ci ftpane'"
+
 # -------------------------------------------------------------------
 # Here be dragons!
 # -------------------------------------------------------------------
