--- a/tmux.conf
+++ b/tmux.conf
@@ -51,17 +51,20 @@ set-option -g mouse-select-window on
 # -------------------------------------------------------------------
 # Key bindings
 # -------------------------------------------------------------------
-# ctrl-a ctrl-a
+# prefix c
+bind-key c new-window -c "#{pane_current_path}"
+
+# prefix ctrl-a
 bind-key c-a last-window
 
-# ctrl-a a
+# prefix a
 bind-key a send-prefix
 
-# ctrl-a |
-bind-key | split-window -h
+# prefix |
+bind-key | split-window -h -c "#{pane_current_path}"
 
-# ctrl-a -
-bind-key - split-window
+# prefix -
+bind-key - split-window -c "#{pane_current_path}"
 
 # Moving windows
 bind-key -r > swap-window -t :+
