--- a/tmux.conf
+++ b/tmux.conf
@@ -89,8 +89,9 @@ bind-key * set-window-option synchronize-pane
 # Reload ~/.tmux.conf
 bind-key R source-file ~/.tmux.conf \; display-message "Reloaded!"
 
-# pbcopy
-bind-key y run-shell "bash -c 'tmux show-buffer | pbcopy'"
+# copy-mode
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-pipe "pbcopy"
 
 # Capture pane and open in Vim
 bind-key C-c capture-pane -S -102400\;\
@@ -124,7 +125,7 @@ bind-key -n 'M-t' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$
 bind-key -n 'M-`' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
 
 # select-pane (@george-b)
-bind-key 0 run "tmux split-window -p 40 'bash -ci ftpane'"
+bind-key 0 run "tmux split-window -l 12 'bash -ci ftpane'"
 
 # -------------------------------------------------------------------
 # Here be dragons!
