Simplify capture-pane

--- a/tmux.conf
+++ b/tmux.conf
@@ -94,10 +94,8 @@ bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-pipe "pbcopy"
 
 # Capture pane and open in Vim
-bind-key C-c capture-pane -S -102400\;\
-             save-buffer /tmp/tmux-capture.txt\;\
-             new-window "view /tmp/tmux-capture.txt"\;\
-             delete-buffer
+bind-key C-c run 'tmux capture-pane -S -102400 -p > /tmp/tmux-capture.txt'\;\
+             new-window "view /tmp/tmux-capture.txt"
 
 # -------------------------------------------------------------------
 # Decoration (256-color)
