--- a/tmux.conf
+++ b/tmux.conf
@@ -97,6 +97,9 @@ bind-key -t vi-copy 'y' copy-pipe "pbcopy"
 bind-key C-c run 'tmux capture-pane -S -102400 -p > /tmp/tmux-capture.txt'\;\
              new-window "view /tmp/tmux-capture.txt"
 
+# Notes
+bind-key C-n new-window "~/gdrive/sync/notes/list"
+
 # -------------------------------------------------------------------
 # Decoration (256-color)
 # -------------------------------------------------------------------
