--- a/tmux.conf
+++ b/tmux.conf
@@ -98,7 +98,7 @@ bind-key C-c run 'tmux capture-pane -S -102400 -p > /tmp/tmux-capture.txt'\;\
              new-window "view /tmp/tmux-capture.txt"
 
 # Notes
-bind-key C-n new-window -n NOTES "~/gdrive/sync/notes/list"
+bind-key C-n new-window -n NOTES "bash -ci ~/gdrive/sync/notes/list"
 
 # -------------------------------------------------------------------
 # Decoration (256-color)
