--- a/tmux.conf
+++ b/tmux.conf
@@ -99,7 +99,7 @@ bind-key C-c run 'tmux capture-pane -S -102400 -p > /tmp/tmux-capture.txt'\;\
 
 # Notes
 bind-key C-n if-shell "tmux select-window -t NOTES" "" \
-  "new-window -n NOTES 'bash -ci ~/gdrive/sync/notes/list'"
+  "new-window -n NOTES 'bash -i ~/gdrive/sync/notes/list'"
 
 # -------------------------------------------------------------------
 # Decoration (256-color)
