--- a/tmux.conf
+++ b/tmux.conf
@@ -96,6 +96,7 @@ bind-key -t vi-copy 'y' copy-pipe "pbcopy"
 # Capture pane and open in Vim
 bind-key C-c run 'tmux capture-pane -S -102400 -p > /tmp/tmux-capture.txt'\;\
              new-window "view /tmp/tmux-capture.txt"
+bind-key M-c run "screencapture -l$(osascript -e 'tell app \"iTerm\" to id of window 1') -x -o -P /tmp/$(date +%Y%m%d-%H%M%S).png"
 
 # Notes
 bind-key C-n if-shell "tmux select-window -t NOTES" "" \
