--- a/tmux.conf
+++ b/tmux.conf
@@ -33,6 +33,9 @@ set-option -g default-terminal "screen-256color"
 # Key binding in the status line (bind-key :)
 set-option -g status-keys emacs
 
+# Mouse
+set-option -g mouse on
+
 # -------------------------------------------------------------------
 # Window options
 # -------------------------------------------------------------------
@@ -40,13 +43,7 @@ set-option -g status-keys emacs
 set-window-option -g utf8 on
 
 # Copy-mode
-set-window-option -g mode-mouse on
 set-window-option -g mode-keys vi
-
-# Mouse
-set-option -g mouse-resize-pane on
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
 
 # -------------------------------------------------------------------
 # Key bindings
