--- a/tmux.conf
+++ b/tmux.conf
@@ -115,6 +115,9 @@ set-option -g pane-border-fg colour238
 set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239]#[fg=colour195]#F#[bg=colour238] '
 set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215] #I #[bg=colour235]#[fg=colour167] #[bg=colour234]#W#[bg=colour235]#[fg=colour195]#F#[bg=colour236] '
 
+# set-window-option -g window-style 'bg=colour238'
+# set-window-option -g window-active-style 'bg=colour237'
+
 # -------------------------------------------------------------------
 # fzf integration
 # -------------------------------------------------------------------
