--- a/tmux.conf
+++ b/tmux.conf
@@ -92,6 +92,9 @@ bind-key C-c run 'tmux capture-pane -S -102400 -p > /tmp/tmux-capture.txt'\;\
              new-window "view /tmp/tmux-capture.txt"
 bind-key M-c run "screencapture -l$(osascript -e 'tell app \"iTerm\" to id of window 1') -x -o -P /tmp/$(date +%Y%m%d-%H%M%S).png"
 
+# Clear scrollback buffer
+bind-key C-l clear-history
+
 # Notes
 bind-key C-n if-shell "tmux select-window -t NOTES" "" \
   "new-window -n NOTES 'bash -i ~/gdrive/sync/notes/list'"
