--- a/tmux.conf
+++ b/tmux.conf
@@ -99,6 +99,9 @@ bind-key C-l send-keys C-l \; clear-history
 bind-key C-n if-shell "tmux select-window -t NOTES" "" \
   "new-window -n NOTES 'bash -i ~/gdrive/sync/notes/list'"
 
+# Goyo
+bind-key G set status
+
 # -------------------------------------------------------------------
 # Decoration (256-color)
 # -------------------------------------------------------------------
