--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,9 @@ set-option -g repeat-time 500
 # 256-color terminal
 set-option -g default-terminal "screen-256color"
 
+# Add truecolor support (tmux info | grep Tc)
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 # Key binding in the status line (bind-key :)
 set-option -g status-keys emacs
 
