--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,9 @@ set-option -g repeat-time 500
 # 256-color terminal
 set-option -g default-terminal "screen-256color"
 
+# Sierra
+set-option -g default-command "reattach-to-user-namespace -l bash"
+
 # Add truecolor support (tmux info | grep Tc)
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
@@ -88,11 +91,11 @@ bind-key R source-file ~/.tmux.conf \; display-message "Reloaded!"
 
 # copy-mode
 bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-pipe "pbcopy"
+bind-key -t vi-copy 'y' copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Capture pane and open in Vim
 bind-key C-c run 'tmux capture-pane -S -102400 -p > /tmp/tmux-capture.txt'\;\
-             new-window "view /tmp/tmux-capture.txt"
+             new-window "reattach-to-user-namespace view /tmp/tmux-capture.txt"
 bind-key M-c run "screencapture -l$(osascript -e 'tell app \"iTerm\" to id of window 1') -x -o -P /tmp/$(date +%Y%m%d-%H%M%S).png"
 
 # Clear scrollback buffer
@@ -100,7 +103,7 @@ bind-key C-l send-keys C-l \; clear-history
 
 # Notes
 bind-key C-n if-shell "tmux select-window -t NOTES" "" \
-  "new-window -n NOTES 'bash -i ~/gdrive/sync/notes/list'"
+  "new-window -n NOTES 'reattach-to-user-namespace bash -i ~/gdrive/sync/notes/list'"
 
 # Goyo
 bind-key G set status
