--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,7 @@ set-option -g prefix c-a
 
 # Index starts from 1
 set-option -g base-index 1
+set-option -g pane-base-index 1
 
 # Renumber windows when a window is closed
 set-option -g renumber-windows on
@@ -117,8 +118,10 @@ set-option -g status-bg colour237
 set-option -g status-right '#[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %b %d %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
 set-option -g status-interval 60
 
-set-option -g pane-active-border-fg colour240
-set-option -g pane-border-fg colour238
+set-option -g pane-border-status bottom
+set-option -g pane-border-format "#{pane_index} #{pane_current_command}"
+set-option -g pane-active-border-fg colour244
+set-option -g pane-border-fg colour242
 
 set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239]#[fg=colour195]#F#[bg=colour238] '
 set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215] #I #[bg=colour235]#[fg=colour167] #[bg=colour234]#W#[bg=colour235]#[fg=colour195]#F#[bg=colour236] '
