--- a/tmux.conf
+++ b/tmux.conf
@@ -112,7 +112,7 @@ bind-key C-l send-keys C-l \; clear-history
 
 # Notes
 bind-key C-n if-shell "tmux select-window -t NOTES" "" \
-  "new-window -n NOTES 'reattach-to-user-namespace bash -i ~/gdrive/sync/notes/list'"
+  "new-window -n NOTES 'reattach-to-user-namespace bash -i ~/gdrive/sync/notes/list'; move-window -t 0" \
 
 # Goyo
 bind-key G set status
