tmux capture-pane to timestamped file

--- a/tmux.conf
+++ b/tmux.conf
@@ -103,7 +103,7 @@ bind-key y send-keys C-l C-a \; run-shell 'sleep 0.25' \;\
   display-message "Line copied"
 
 # Capture pane and open in Vim
-bind-key C-c run 'tmux capture-pane -J -S -102400 -p > /tmp/tmux-capture.txt' \; new-window "reattach-to-user-namespace view /tmp/tmux-capture.txt"
+bind-key C-c run 'FILE=/tmp/tmux-capture-$(date +%Y%m%d%H%M%S).txt; tmux capture-pane -J -S -102400 -p > $FILE; tmux new-window "reattach-to-user-namespace vim $FILE"'
 bind-key M-c run "screencapture -l$(osascript -e 'tell app \"iTerm\" to id of window 1') -x -o -P /tmp/$(date +%Y%m%d-%H%M%S).png"
 
 # Clear scrollback buffer
