--- a/tmux.conf
+++ b/tmux.conf
@@ -166,3 +166,6 @@ bind-key F10 set-option -g prefix "\\"  \;\
              bind-key p paste-buffer    \;\
              bind-key "\\" last-window
 
+# TPM
+set -g @plugin 'wfxr/tmux-fzf-url'
+run '~/.tmux/plugins/tpm/tpm'
