Use fork of tmux-fzf-url

--- a/tmux.conf
+++ b/tmux.conf
@@ -167,5 +167,5 @@ bind-key F10 set-option -g prefix "\\"  \;\
              bind-key "\\" last-window
 
 # TPM
-set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @plugin 'junegunn/tmux-fzf-url'
 run '~/.tmux/plugins/tpm/tpm'
