--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,7 +1,7 @@
 {
   "yaml.schemas": {
-    "kubernetes": "*k8s*/*.y*ml",
-    "http://json.schemastore.org/ansible-stable-2.6": "/*.y*ml"
+    "kubernetes": "*.y*ml",
+    "http://json.schemastore.org/ansible-stable-2.7": "*ansible*.y*ml"
   },
   "languageserver": {
     "golang": {
