Use tmux popups

--- a/tmux.conf
+++ b/tmux.conf
@@ -141,20 +141,18 @@ set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215
 # fzf integration
 # -------------------------------------------------------------------
 # Tmux completion
-bind-key -n 'M-t' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(tmuxwords.rb --all --scroll 1000 --min 5 | fzf --multi | paste -sd\\  -)\"'"
+bind-key t run-shell 'tmux send-keys -t #{pane_id} "$(tmux-fzf-words)"'
+bind-key T run-shell 'tmux send-keys -t #{pane_id} "$(tmux-fzf-words --all)"'
 
-# fzf-locate (all)
-bind-key -n 'M-`' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
-
-# select-pane (@george-b)
-bind-key 0 run "tmux split-window -l 12 'bash -ci ftpane'"
+# Select pane
+bind-key 0 run-shell "tmux-fzf-panes || :"
 
 # -------------------------------------------------------------------
 # Here be dragons!
 # -------------------------------------------------------------------
 # Backslash bind-key
 if-shell "test $USER = jg" \
-  "unbind C-a; set-option -g prefix \\ ; bind-key ] send-prefix; bind-key p paste-buffer; bind-key \\ last-window"
+  'unbind C-a; set-option -g prefix \\ ; bind-key ] send-prefix; bind-key p paste-buffer; bind-key \\ last-window'
 
 # Bind-key switch
 bind-key F9  set-option -g prefix C-a   \;\
