fzf in tmux popup

--- a/tmux.conf
+++ b/tmux.conf
@@ -68,8 +68,8 @@ bind-key | split-window -h -c "#{pane_current_path}"
 bind-key - split-window -c "#{pane_current_path}"
 
 # Moving windows
-bind-key -r > swap-window -t :+
-bind-key -r < swap-window -t :-
+bind-key -r > swap-window -d -t :+
+bind-key -r < swap-window -d -t :-
 
 # Back and forth
 bind-key bspace previous-window
