--- a/tmux.conf
+++ b/tmux.conf
@@ -166,4 +166,5 @@ bind-key F10 set-option -g prefix "\\"  \;\
 
 # TPM
 set -g @plugin 'junegunn/tmux-fzf-url'
+set -g @plugin 'junegunn/tmux-fzf-maccy'
 run '~/.tmux/plugins/tpm/tpm'
