--- a/coc-settings.json
+++ b/coc-settings.json
@@ -9,5 +9,6 @@
       "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
       "filetypes": ["go"]
     }
-  }
+  },
+  "java.errors.incompleteClasspath.severity": "ignore"
 }
