--- a/tmux.conf
+++ b/tmux.conf
@@ -29,7 +29,7 @@ set-option -g history-limit 102400
 set-option -g repeat-time 500
 
 # 256-color terminal
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "tmux-256color"
 
 # Sierra
 set-option -g default-command "reattach-to-user-namespace -l bash"
