--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,7 +1,7 @@
 {
   "yaml.schemas": {
     "kubernetes": "*.y*ml",
-    "http://json.schemastore.org/ansible-stable-2.7": "*ansible*.y*ml"
+    "https://json.schemastore.org/ansible-playbook": "*ansible*.y*ml"
   },
   "languageserver": {
     "golang": {
@@ -10,5 +10,6 @@
       "filetypes": ["go"]
     }
   },
+  "python.jediPath": "/usr/local/lib/python3.9/site-packages",
   "java.errors.incompleteClasspath.severity": "ignore"
 }
